--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,12 @@
 }
 
 :root {
---color-text: whitesmoke;
---color-questions: black;
---color-buttons: lightgray;
---color-answer-button-text: black;
+--color-text: #f5f5f5;
+--color-questions: #000000;
+--color-buttons: #d3d3d3;
+--color-answer-button-text: #000000;
+--border-color: #8888e4;
+--background-color-nav: #140523b9;
 
 }
 
@@ -25,19 +27,7 @@ body {
   z-index: -1;
 }
 
-.header {
-  background: #140523;
-  height: 80px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
-  padding: 10px;
-  position: sticky;
-  top: 0;
-  z-index: 1;
-}
 
-.header__heading {
-  margin: 0;
-}
 
 main {
   padding: 80px;
@@ -52,7 +42,7 @@ h1 {
   text-align: center;
 }
 
-.question_block {
+______.question_block {
   background-color: rgba(250, 243, 243, 0.712);
   position: relative;
   border: 2px solid;
@@ -60,7 +50,7 @@ h1 {
   text-align: center;
   height: 15rem;
   border-radius: 2rem;
-  border-color: var(--color-text);
+  border-color: var(--border-color);
 }
 
 h2 {
@@ -86,14 +76,15 @@ h2 {
   border-radius: 50%;
 }
 
-.answer_button {
+_____.answer_button {
   position: relative;
-  border-color: rgb(172, 172, 172);
+  border-color: var(--border-color);
   background-color: var(--color-buttons);
   color: var(--color-answer-button-text);
   top: 20%;
   padding: 5px 16px;
   border-radius: 5px;
+  border 1px solid; 
 }
 
 li {
@@ -104,6 +95,7 @@ li {
   border-radius: 5px;
   bottom: -3rem;
   list-style: none;
+  
 }
 
 ul {
@@ -119,7 +111,7 @@ navigation {
 }
 
 nav {
-  background: #140523b9;
+  background: var(--background-color-nav);
   color: var(--color-text);
   height: 80px;
   box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
@@ -138,6 +130,7 @@ a {
   position: sticky;
   bottom: 0;
   text-decoration: none;
+  
 }
 
 a:hover {
@@ -257,4 +250,12 @@ h2 {
 .switch input:checked + .switch_slide {
   background-color: var(--color-text);
   transform: translateX(1.3rem);
+}
+
+.antwortButton {
+  color: green;
+}
+
+#hidden {
+  display: none;
 }
