--- a/components/card.css
+++ b/components/card.css
@@ -12,6 +12,21 @@
 
   }
 
+  body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+
+  main {
+    padding: 80px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
 
   .question_block {
     background-color: rgba(250, 243, 243, 0.712);
@@ -105,11 +120,19 @@
     position: relative;
     gap: 15px;
     justify-content: center;
-    top: 1rem;
+    top: -1rem;
   }
   
   .badges {
     position: relative;
     display: flex;
     padding: 20px;
+  }
+
+  .answerChoise {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+    gap: 1rem;
   }
