--- a/components/navigation.css
+++ b/components/navigation.css
@@ -17,9 +17,9 @@
     color: var(--color-text);
     height: 80px;
     box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
-    position: sticky;
+    position: absolute;
     padding: 30px;
-    top: 0;
+    bottom: -20rem;
     z-index: 1;
     display: flex;
     justify-content: space-around;
@@ -32,6 +32,8 @@
     position: sticky;
     bottom: 0;
     text-decoration: none;
+    display: flex;
+    justify-content: space-around;
     
   }
   
