--- a/components/buttons.css
+++ b/components/buttons.css
@@ -15,15 +15,16 @@
 
 .answer_button {
   position: relative;
-  top: 1rem;
+  top: 0.7rem;
   border-radius: 0.3rem;
+  margin: 10px;
 
 }
 
    
 
 .answer_button:hover {
-  background-color: rgb(19, 212, 19);
+  background-color: rgba(25, 160, 25, 0.634)
 }
 
 
@@ -61,4 +62,7 @@
 
   .hidden {
     display: none;
+  }
+  .submit_button {
+    border-radius: 0.3rem;
   }
